# internal/provider/type_zone_stats_server_counts.go
@@ -1,15 +1,0 @@
-// Code generated by Speakeasy (https://speakeasyapi.dev). DO NOT EDIT.
-
-package provider
-
-import "github.com/hashicorp/terraform-plugin-framework/types"
-
-type ZoneStatsServerCounts struct {
-	All           types.Int64 `tfsdk:"all"`
-	Baremetal     types.Int64 `tfsdk:"baremetal"`
-	ContainerHost types.Int64 `tfsdk:"container_host"`
-	Host          types.Int64 `tfsdk:"host"`
-	Hypervisor    types.Int64 `tfsdk:"hypervisor"`
-	Unmanaged     types.Int64 `tfsdk:"unmanaged"`
-	VM            types.Int64 `tfsdk:"vm"`
-}
